--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "3d-integral-explorer",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://vijayaramesh1.github.io/3d-integral-explorer",
+  "homepage": "https://vijayaramesh1.github.io/3d-integral-explorer/",
   "dependencies": {
     "@react-three/drei": "^9.40.0",
     "@react-three/fiber": "^8.9.1",
@@ -44,6 +44,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^4.0.0"
+    "gh-pages": "^6.1.1"
   }
 }
