--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -31,11 +31,16 @@ jobs:
         with:
           node-version: 18
       
-      - name: Install dependencies
-        run: npm install
+      - name: List files in directory
+        run: ls -la
       
-      - name: Build
-        run: npm run build
+      - name: Install dependencies
+        run: npm install --legacy-peer-deps
+      
+      - name: Build with debug output
+        run: |
+          echo "Starting build process..."
+          CI=false npm run build
       
       - name: Setup Pages
         uses: actions/configure-pages@v5
