--- a/package.json
+++ b/package.json
@@ -4,22 +4,22 @@
   "private": true,
   "homepage": "https://vijayaramesh1.github.io/3d-integral-explorer/",
   "dependencies": {
-    "@react-three/drei": "^9.40.0",
-    "@react-three/fiber": "^8.9.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "mathjs": "^11.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@react-three/drei": "9.40.0",
+    "@react-three/fiber": "8.9.1",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "13.4.0",
+    "@testing-library/user-event": "13.5.0",
+    "mathjs": "11.5.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
-    "styled-components": "^5.3.6",
-    "three": "^0.146.0",
-    "web-vitals": "^2.1.4"
+    "styled-components": "5.3.6",
+    "three": "0.146.0",
+    "web-vitals": "2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI=false GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
@@ -44,6 +44,9 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1"
+    "gh-pages": "6.1.1"
+  },
+  "resolutions": {
+    "nth-check": "^2.0.1"
   }
 }
