--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "13.5.0",
+    "ajv": "8.12.0",
+    "ajv-keywords": "5.1.0",
     "mathjs": "11.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
+    "schema-utils": "4.0.1",
     "styled-components": "5.3.6",
     "three": "0.146.0",
     "web-vitals": "2.1.4"
@@ -47,6 +50,9 @@
     "gh-pages": "6.1.1"
   },
   "resolutions": {
-    "nth-check": "^2.0.1"
+    "ajv": "8.12.0",
+    "ajv-keywords": "5.1.0",
+    "nth-check": "2.1.1",
+    "webpack": "5.76.0"
   }
 }
