--- a/package.json
+++ b/package.json
@@ -47,12 +47,15 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "6.1.1"
+    "gh-pages": "4.0.0"
   },
   "resolutions": {
     "ajv": "8.12.0",
     "ajv-keywords": "5.1.0",
-    "nth-check": "2.1.1",
-    "webpack": "5.76.0"
+    "nth-check": "2.1.1"
+  },
+  "engines": {
+    "node": ">=16.0.0 <17.0.0",
+    "npm": ">=8.0.0 <9.0.0"
   }
 }
