--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "3d-integral-explorer",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://vijayaramesh1.github.io/3d-integral-explorer/",
+  "homepage": ".",
   "dependencies": {
     "@react-three/drei": "9.40.0",
     "@react-three/fiber": "8.9.1",
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI=false GENERATE_SOURCEMAP=false react-scripts build",
+    "build": "CI=false GENERATE_SOURCEMAP=false PUBLIC_URL=. react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
