Add UI components, pages, and additional configuration

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,28 @@
 {
-  "short_name": "Integral Explorer",
+  "short_name": "IntegralExplorer",
   "name": "3D Integral Explorer",
+  "description": "Interactive tool for visualizing and understanding integral calculus in 3D",
   "icons": [
     {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
+    },
+    {
+      "src": "logo192.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    },
+    {
+      "src": "logo512.png",
+      "type": "image/png",
+      "sizes": "512x512"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#0A1128",
-  "background_color": "#1C2541"
+  "theme_color": "#5BC0BE",
+  "background_color": "#0A1128",
+  "categories": ["education", "mathematics", "visualization"],
+  "orientation": "any"
 }
